# calorisee

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
backend/: app.py  config.py  database.py  models.py  requirements.txt  schemas.py
backend/routers/: dashboard.py  datasets.py  jobs.py  media.py  messages.py
backend/services/: job_manager.py  pipeline.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: KpiCard.tsx  Layout.tsx  MacroBar.tsx  MealCard.tsx  MessageDetailModal.tsx  ProgressStepper.tsx
frontend/src/hooks/: useActiveDataset.ts  useJobSSE.ts
frontend/src/pages/: DashboardPage.tsx  DayViewPage.tsx  DaysListPage.tsx  ImportPage.tsx
whatsapp_calorie_bot/: __init__.py  __main__.py  batch.py  cli.py  extract.py  gdrive.py  inference.py  openai_client.py  report.py  stats.py  storage.py  whatsapp_parse.py
